# spotimon

./: Cargo.toml  README.md  config.toml  install.sh
src/: config.rs  lyrics.rs  main.rs  mpris.rs  player_controller.rs  state.rs  track_library.rs  utils.rs
src/docs/: config.md  roadmap.md
src/ui/: render.rs
