[package]
name = "spotimon"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dirs = "6.0.0"
image = "0.25.10"
lofty = "0.24.0"
rand = "0.10.1"
ratatui = "0.30.0"
ratatui-image = "10.0.6"
reqwest = { version = "0.13.2", features = ["blocking"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
souvlaki = "0.8.3"
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
